Edited header 2 exercise - issue with gap
body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content:space-evenly;
+  align-items:center;
+body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  padding: 8px;
+  display: flex;

 }

 ul {
-  list-style-type: none;
+  list-style-type:none;
+  display: flex;
+  flex: 1;
+  gap: 10px;

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content:space-evenly;
+  align-items:center;
+
+
+
 }
 
 .profile-image {
@@ -20,6 +26,13 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  padding: 8px;
+  
+
+  
+  
+  
+ 
 }
 
 .logo {
@@ -27,6 +40,10 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding:8px;
+
+
+
 }
 
 button {
@@ -35,14 +52,27 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display: flex;
+
+
+  
+
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  display: flex;
+  
 }
 
 ul {
-  list-style-type: none;
+  list-style-type:none;
+  display: flex;
+  flex: 1;
+  gap: 10px;
+   
+  
+
 }
